--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ Markdown==3.3.6
 MarkupSafe==2.1.1
 mergedeep==1.3.4
 mkdocs==1.3.0
+mkdocs-macros-plugin==0.7.0
 packaging==21.3
 pyparsing==3.0.8
 python-dateutil==2.8.2
 PyYAML==6.0
 pyyaml_env_tag==0.1
 six==1.16.0
+termcolor==1.1.0
 watchdog==2.1.7
 zipp==3.8.0
